Fix a little spacing bug for mobile devices.

--- a/css/style.css
+++ b/css/style.css
@@ -344,6 +344,10 @@ Linearise it!
 	nav li:nth-child(3)::after{
 		content:"";
 	}
+	nav li:nth-child(4),
+	nav li:nth-child(4){
+		padding-left: 0;
+	}
 	footer {
 		margin-top:30px;
 	}
